tests/negative/other/function_default_param_type.tx
// EXPECTED: COMPILE_ERROR
// Description: Default parameter values must match the declared parameter type.

function greet(name: string = 1): string {
    return name;
}

function main() {}
